# nada

./: .backstage.yaml  .envrc  .gitignore  404.html  CNAME  README.md  SUMMARY.md  behandlingskatalog.md  docusaurus.config.js  flake.nix  index.html  mkdocs.yml  package.json  pyproject.toml  sidebars.js  sitemap.xml
.github/workflows/: deploy.yaml  documentation.yaml
adr/: 001-merking-personopplysninger.md
analyse/allowlisting/: index.html
analyse/datafortellinger/: index.html
analyse/eksempler/: index.html
analyse/google-secret-manager/: index.html
analyse/knada-vm/: index.html
analyse/koble-pseudonymiserte/: index.html
analyse/kom-i-gang/: index.html
analyse/metabase/: index.html
analyse/notebook/: index.html
analyse/tdv/: index.html
analyseplattform/: README.md
analyseplattform/airflow/: README.md
analyseplattform/dataverk/: README.md
analyseplattform/doccano/: README.md
analyseplattform/kubeflow/: getting-started.md
anonymisering/: README.md
begrepskatalog/: README.md
content/analyseplattform/: Analyseplattform.vsd  README.md  ~$$Analyseplattform.~vsd
custom_theme_overrides/: 404.html  main.html
datajegerne/: behandlingskatalog.md  etterlevelse.md  teamkatalog.md
datakatalog/: README.md  adr koblingsnøkkel.vsd  datakatalog_domene_graf.vsd  stories.md
dataprodukter/: index.html
docs/: README.md  index.md  ordliste.md  stikkord.md
kafka/: README.md
opendata/: README.md
ordliste/: index.html
produktkart/: README.md  produkter.md  veikart.md
search/: search_index.json
site/: index.html  sitemap.xml
(+270 files in other folders)
