[tool.poetry]
name = "nada"
version = "0.1.0"
description = ""
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.5"
mkdocs-pymdownx-material-extras = "^2.3.1"
mkdocs-build-plantuml-plugin = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
